# real-estate-backend

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/diary/application_layer/: diary_event_service.rs  diary_settings_service.rs  mod.rs
src/diary/domain_layer/: diary_event.rs  diary_event_types.rs  diary_settings.rs  mod.rs
src/diary/infrastructure_layer/: custom_error_repo_diary.rs  diary_event_repo.rs  diary_settings_repo.rs  mod.rs
src/diary/presentation_layer/: diary_event_controller.rs  diary_settings_controller.rs  mod.rs
src/landlord/application_layer/: landlord_service.rs  mod.rs
src/landlord/domain_layer/: landlord_additional_contact.rs  landlord_details.rs  landlord_documents.rs  landlord_general.rs  landlord_registration_progress.rs  landlord_structured_registration_data.rs  landlords_address.rs  landlords_bank_details.rs  landlords_lettings_management.rs  mod.rs
src/landlord/infrastructure_layer/: landlord_repository.rs  mod.rs
src/landlord/presentation_layer/: landlord_controller.rs  mod.rs
src/properties/application_layer/: mod.rs  properties_service.rs  property_address_service.rs  property_photos_service.rs
src/properties/domain_layer/: mod.rs  property.rs  property_address.rs  property_certificates.rs  property_core.rs  property_images.rs  property_keys_security.rs  property_photos.rs  property_rental_info.rs  property_services.rs  property_specifications.rs
src/properties/infrastructure_layer/: auth_repo.rs  custom_error_repo.rs  kafka_consumer.rs  mod.rs  properties_repository.rs  property_address_repository.rs  property_images_repository.rs  property_photos_repository.rs
src/properties/presentation_layer/: mod.rs  properties_controller.rs  property_address_controller.rs  property_images_controller.rs
src/user/application_layer/: user_service.rs
src/user/domain_layer/: mod.rs  user.rs  user_address.rs  user_audit_trail.rs  user_changes_made.rs  user_note.rs
src/user/infrastructure_layer/: auth_repo.rs  custom_error_repo.rs  jwt_repo.rs  mod.rs  user_repository.rs
src/user/presentation_layer/: mod.rs  user_controller.rs
