[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.150", features = ["derive"] }
sqlx = {version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "time", "chrono", "uuid", "bigdecimal"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
chrono = { version = "0.4.22", features = ["serde"] }
futures-util = "0.3.29"
jsonwebtoken = "9.1.0"
dotenv = "0.15.0"
derive_more = "0.99.17"
serde_json = "1.0.89"
argon2 = "0.5.2"
listenfd = "1.0.1"
image = { version = "0.24.7", features = ["avif"] }
futures-channel = "0.3.0"
futures-executor = { version = "0.3.0", optional = true }
libc = "0.2.0"
rdkafka = "0.36.2"
async-std = { version = "1.9.0", features = ["attributes"] }
tokio = { version = "1.37", features = ["full"] }
log = "0.4.20"
clap = "4.4.8"
prost = "0.12.4"
actix-multipart = "0.6.1"
mime = "0.3.17"
crossbeam-channel = "0.5.13"
rust-s3 = "0.33.0"
time = "0.3.36"
actix-cors = "0.7.0"
thiserror = "1.0.66"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"